Fix spacing for social media icon, give more margin-top to heroBanner, and tighten gap between bottom of clock and image card picture

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,8 +12,7 @@
 .mainBody {
   display: flex;
   flex-direction: column;
-  padding-top: 8rem;
+  padding-top: 2.5rem;
   padding-bottom: 5rem;
-
   position: relative;
 }
